2003-08-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (ecm_get_color_for_component): use tigert's
	new color palette.

2003-08-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_model_finalize): don't unref the
	'accounts' field, since it is internal to itip-utils.c.

	* gui/alarm-notify/alarm-notify.c (alarm_notify_add_calendar):
	initialize all fields of the LoadedClient struct before calling
	cal_client_open_calendar(), since the "cal_opened_cb" signal is
	now emitted within it.

2003-08-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_model_create_component_with_defaults):
	use the default client to call cal_comp_*_new_with_defaults, and
	if no client is available, just create an empty icalcomponent.

	* gui/e-cal-view.c (e_cal_view_init): create an empty model.

	* gui/e-week-view.c (e_week_view_add_event): use the event's client.

2003-08-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_free_component_data): new
	function.

	* gui/e-cal-view.h: added 'allocated_comp_data' field to the
	ECalViewEvent structure.

	* gui/e-day-view.c (e_day_view_add_event): allocate the event's
	ECalModelComponent if it hasn't been set.
	(e_day_view_update_event_cb, e_day_view_remove_event_cb,
	e_day_view_free_event_array): if the ECalModelComponent has
	been allocated by the view, free it here.

	* gui/e-week-event.c (e_week_view_add_event,
	e_week_view_update_event_cb, e_week_view_remove_event_cb,
	e_week_view_free_events): same as EDayView.

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (ecm_append_row, ecm_get_color_for_component):
	* gui/e-cal-model-tasks.c (ecmt_get_color_for_component): merged
	missing bith from calendar-views-with-model branch.

2003-08-13  JP Rosevear  <jpr@ximian.com>

	* cal-client/cal-client.c (real_open_calendar): set the priv->cal
	pointer in a slightly different spot so we have it in the call
	back
