@@ -1,8 +1,8 @@
 [Desktop Entry]
 _Name=Ximian Evolution
 _Comment=The Evolution groupware suite
-Exec=evolution-1.4
-Icon=evolution-1.4.png
+Exec=evolution-1.5
+Icon=evolution-1.5.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Office;X-Red-Hat-Base;
