@@ -2,6 +2,9 @@
 
 	* gui/e-cal-model.c (ecm_get_color_for_component): use tigert's
 	new color palette.
+	(cal_removed_cb): when a client is removed, remove it from the model.
+	(backend_died_cb): remove it also when the backend dies.
+	(add_new_client): connect to new signals for CalClient's.
 
 2003-08-15  Rodrigo Moya <rodrigo@ximian.com>
 
